--- a/aula01/index.html
+++ b/aula01/index.html
@@ -25,6 +25,23 @@
             <p><del> evelyn </del></p>
             <p><s> barreto </s></p>
 
+            <ol>
+                <li>primeiro item</li>
+                <li>segundo item</li>
+                <li>terceiro item</li>
+            </ol>
+            <ul>
+                <li>item a</li>
+                <li>item b</li>
+                <li>item c</li> 
+            </ul>
+
+            <b></b>
+            <i></i>
+            <u></u>
+            <hr>
+            <br>
+
         </body>
     </head>
 </html>
