Co-authored-by: mariiiyn <mariiiyn@users.noreply.github.com> Co-authored-by: biamrnr <biamrnr@users.noreply.github.com> Co-authored-by: bia-binii <bia-binii@users.noreply.github.com>

--- a/aula02/index.html
+++ b/aula02/index.html
@@ -6,6 +6,20 @@
     <title>Aula 2</title>
 </head>
 <body>
+    <div style="border: 5px solid rgb(32, 52, 123); padding: 10px; 
+    background-color: rgb(201, 157, 242); font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+        <h2>Notícias do dia</h2>
+        <p>Hoje tivemos um evento importante...</p>
+    </div>
+
+    <p style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif"> Este é um <span>aviso importante</span> no meio do texto</p>
+
+    <p> E = mc<sup>2</sup></p>
+    <p>H<sub>2</sub>O</p>
+    <p style=" text-align: left;"> Texto alinhado a esquerda. </p>
+    <p style=" text-align: right;"> Texto alinhado a direita. </p>
+    <p style=" text-align: center;"> Texto alinhado no centro. </p>
+    <p style=" text-align: justify;"> Texto justificado. </p>
     
 </body>
 </html>
